# metacontrol_bridge

./: README.md
lifecycle_msgs/: CMakeLists.txt  package.xml
metacontrol_bridge/: CMakeLists.txt  package.xml  setup.py
metacontrol_bridge/include/metacontrol_bridge/: MetacontrolNode.hpp
metacontrol_bridge/src/: demo_node.cpp
metacontrol_bridge/src/metacontrol_bridge/: MetaControlNode.cpp  metacontrol_bridge.py
metacontrol_bridge_demo/: CMakeLists.txt  package.xml
metacontrol_bridge_demo/scripts/: demo_node.py
