<?xml version="1.0"?>
<package format="2">
  <name>lifecycle_msgs</name>
  <version>0.0.1</version>
  <description>The lifecycle_msgs package</description>

  <maintainer email="fmrico@gmail.com">fmrico</maintainer>

  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  

  <export>
  </export>
</package>
