<?xml version="1.0"?>
<package format="2">
  <name>metacontrol_bridge</name>
  <version>0.0.0</version>
  <description>The metacontrol_bridge package</description>

  <maintainer email="fmrico@gmail.com">Francisco Martín</maintainer>
  <license>Apache 2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>lifecycle_msgs</exec_depend>

  <export>
  </export>
</package>